# estrutura_projetos

./: .gitignore  main.py  pyproject.toml
