[tool.poetry]
name = "etl"
version = "0.1.0"
description = "Projeto ETL"
authors = ["Guilherme Ramos <uepa.pap@gmail.com>"]
license = "Minha"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
